Various UI improvements.